assert-struct/tests/snapshots/enums__result_expected_ok_got_err.snap
---
source: assert-struct/tests/enums.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/enums_errors/result_expected_ok_got_err.rs:30:27
   |
30 |             login_result: Ok("user123"),
   |                           ^^ expected variant Ok(...), got Err("Failed")
